# httpserver

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
examples/: ComplexServerExample.cpp  WebSessionHandlerFactory.h
pollhttpd/: AbstractServer.h  AbstractSocket.h  AsyncUnixServer.h  AsyncWindowsServer.h  CommonUtils.h  HTTPDefaultServerResponses.h  HTTPRequestParser.h  IHandlerFactory.h  IRequestHandler.h  IServer.h  ISocket.h  Logger.h  PollingHelper.h  Types.h  UnixClientSocket.h  UnixServerSocket.h  WebSession.h  WindowsClientSocket.h  WindowsServerSocket.h  httpserver.cpp
src/: AbstractServer.h  AbstractSocket.h  AsyncUnixServer.h  AsyncWindowsServer.h  CommonUtils.h  HTTP.h  HTTPDefaultServerResponses.h  HTTPRequestParser.h  HTTPResponseBuilder.h  HTTPResponses.h  IHandler.h  IHandlerFactory.h  IRequestHandler.h  IServer.h  ISocket.h  Logger.h  NetworkUtils.h  PollingHelper.h  Types.h  UnixClientSocket.h  UnixServerSocket.h  UnixSocket.h  WebSession.h  WebSessionHandler.h  WebSessionHandlerFactory.h  WindowsClientSocket.h  WindowsServerSocket.h  httpserver.cpp
